--- a/style.css
+++ b/style.css
@@ -59,6 +59,50 @@ body, html{
     transition: height 2s;
 }
 
+.hero-image:hover{
+    height: 80%;
+
+}
+
+.hero-text{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    font-family: 'Montserrat', 'Arial', Helvetica, sans-serif;
+    font-size: calc(40px + 1vw);
+    font-weight: 700;
+    color: white;
+    text-shadow: 0 0 0.15em #2C887B;
+    user-select: none;
+    white-space: nowrap;
+    filter: blur(.007em);
+    animation: qshake 5s linear forwards;
+    animation-iteration-count: infinite;
+}
+
+.hero-text button{
+    border: none;
+    outline:0;
+    width:50%;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color:#617C7F;
+    text-align: center;
+    cursor: pointer;
+    transition-property: background-color;
+    transition: width 2s;
+    transition-duration: 5s;
+    font-size: large;
+}
+
+.hero-text button:hover{
+    color:white;
+    width: 100%;
+}
+
     .wrapper {
         display: flex;
         align-items: center;
