--- a/style.css
+++ b/style.css
@@ -152,4 +152,53 @@ h1{
         align-items: center;
         justify-content: center;
     }
-
+.cracked {
+        font-size: 100px;
+        color: #fff;
+        text-transform: uppercase;
+        position: relative;
+        animation: glow 2s linear infinite;
+        animation-direction: alternate;
+    }
+    .cracked span:nth-child(1) ,
+    .cracked span:nth-child(3) {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .cracked span:nth-child(1) {
+        clip-path: polygon(-10% 0%, 10% 0%, 60% 100%, -10% 100%);
+        animation: crack1 0.2s linear forwards;
+    }
+    .cracked span:nth-child(2) {
+        clip-path: polygon(10% 0%, 40% 0%, 80% 100%, 60% 100%);
+    }
+    .cracked span:nth-child(3) {
+        clip-path: polygon(40% 0%, 110% 0%, 110% 100%, 80% 100%);
+        animation: crack2 0.2s linear forwards;
+    }
+    @keyframes crack1 {
+        0% {
+            transform: translate(0%,0%); 
+        }
+        100% {
+            transform: translate(-2%, 1%) rotateZ(1deg); 
+        }
+    }
+    @keyframes crack2 {
+        0% {
+            transform: translate(0%,0%); }
+        100% {
+            transform: translate(2%, -1%) rotateZ(1deg); 
+        }
+    }
+    @keyframes glow {
+    0% {
+        text-shadow: 0 0 1rem #ffff01;
+        filter: brightness(150%) blur(0.01rem);
+    }
+    100% {
+        text-shadow: 0 0 1rem #0ff;
+        filter: brightness(150%) blur(0.01rem);
+    }
+    }
