--- a/style.css
+++ b/style.css
@@ -202,3 +202,80 @@ h1{
         filter: brightness(150%) blur(0.01rem);
     }
     }
+
+    
+  .columns{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 5px 5px;
+  }
+
+  .column{
+    flex:1;
+    border: 0.5 solid #2A363B;
+    margin: 5px;
+    padding: 10px;
+    height:auto;
+    box-shadow: 3px 5px 5px #2A363B;
+    -webkit-box-shadow: 3px 5px 5px #2A363B;
+  }
+    
+  .column iframe:hover{
+    transition: transform 1s;
+    transform: scale(1.07);
+    opacity:0.7;
+  }
+
+  @media screen and (max-width:960px){
+    .footer-container{
+        max-width: 600px;
+        background: white;
+    }
+    .hero-image{
+        background: black;
+        height: 35%;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+        transition: height 2s;
+    }
+    .hero-image:hover{
+        height: 40%;
+    }
+    .topnav a:not(first-child) {display: none}
+    .topnav a.icon{
+        float:right;
+        display: block;
+    }
+
+    .topnav.responsive{position: relative;}
+    .topnav.responsive a.icon{
+        position: absolute;
+        right:0;
+        top:0;
+    }
+    .topnav.responsive a{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+  }
+
+  .left-col{
+    $w: 4vmin;
+$r: 50%;
+$o: .5*(100% + $r) - $r;
+  }
+  
+@property --k {
+	syntax: '<number>';
+	initial-value: 0;
+	inherits: false
+}
+
+body {
+	display: grid;
+	margin: 0;
+	height: 100vh;
+}
